--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -81,6 +81,7 @@
         android:layout_height="27dp"
         android:layout_marginStart="183dp"
         android:layout_marginBottom="24dp"
+        android:onClick="home_user"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:srcCompat="@drawable/homewhite" />
@@ -91,7 +92,7 @@
         android:layout_height="27dp"
         android:layout_marginEnd="260dp"
         android:layout_marginBottom="23dp"
-        android:onClick="tournament_home"
+        android:onClick="tournament_home_user"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:srcCompat="@drawable/cup_black" />
@@ -102,6 +103,7 @@
         android:layout_height="27dp"
         android:layout_marginEnd="20dp"
         android:layout_marginBottom="23dp"
+        android:onClick="user_home_user"
         app:layout_constraintBottom_toBottomOf="@+id/descript"
         app:layout_constraintEnd_toEndOf="parent"
         app:srcCompat="@drawable/rank_black" />
@@ -112,6 +114,7 @@
         android:layout_height="27dp"
         android:layout_marginEnd="41dp"
         android:layout_marginBottom="22dp"
+        android:onClick="team_home_user"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toStartOf="@+id/descript"
         app:srcCompat="@drawable/team_black" />
@@ -122,6 +125,7 @@
         android:layout_height="29dp"
         android:layout_marginStart="12dp"
         android:layout_marginBottom="2dp"
+        android:onClick="game_home_user"
         app:layout_constraintBottom_toTopOf="@+id/textView"
         app:layout_constraintStart_toStartOf="parent"
         app:srcCompat="@drawable/console_black" />
